# INAVSSolver

./: .gitignore  CMakeLists.txt  README.md  assy_mom.cc  assy_p_corr.cc  assy_vel_corr.cc  test1.cc  test2.cc  test3.cc  test3b.cc
MathTest3/: MathTest3.aux  MathTest3.lof  MathTest3.toc
Solver/: solver.h  solver_00a_init.h  solver_00aa_init_properties.h  solver_00b_execute.h  solver_01_init.cc  solver_01a_init_properties.cc  solver_01aa_compute_gradP_WLSQ.h  solver_01ab_compute_grapP_GG.h  solver_01ba_compute_gradU_WLSQ.h  solver_02_assy_solve_mom.h  solver_02_execute.cc  solver_03_compute_massfluxMMIM.h  solver_03a_compute_gradP_WLSQ.cc  solver_03a_compute_grapP.cc  solver_03a_compute_grapP_GG.cc  solver_03b_compute_gradU.cc  solver_03b_compute_gradUOrMf.cc  solver_03b_compute_gradU_WLSQ.cc  solver_03b_compute_massfluxMMIM.cc  solver_03c_assy_mom.cc  solver_04_assy_solve_pcorr.h  solver_04a_assy_pcorr.cc  solver_04a_compute_massflux.cc  solver_04b_assy_pcorr.cc  solver_04b_compute_corrections.cc  solver_04c_compute_corr.cc  solver_05_compute_corrections.h
Whitepaper/: INAVS_whitepaper.tex
Whitepaper/Data/: Benchmark_LidDriven.xlsx  ParaviewDataBM_N100.csv  ParaviewDataBM_N50.csv
Whitepaper/Figures/: FaceAverages.eps  FaceAveragesSkewed.eps
